fix image z-index

--- a/src/assets/css/hero.scss
+++ b/src/assets/css/hero.scss
@@ -5,7 +5,6 @@
     position: relative;
 
     .left-side {
-        z-index: 10;
 
         img {
             height: 100%;
